<resources>
    <string name="app_name">位置互享</string>
    <string name="getnull">用户名或密码不能为空</string>
    <string name="login">登录成功</string>
    <string name="geterror">用户名或密码错误!</string>
    <string name="notEmpty">注册信息不能为空!</string>
    <string name="notEqual">输入密码不同!</string>
    <string name="hasuser">用户名已存在!</string>
    <string name="hasemail">email已被注册!</string>
    <string name="regsecs">注册成功，跳转至登录界面...</string>
    <string name="dknull">发生未知错误...</string>
    <string name="findemail">邮件已发送，请注意查收!</string>
    <string name="unemail">邮箱地址不存在，快去注册吧!</string>
    <string name="login_warn">点击头像登录</string>
    <string name="touchagain">再按一次退出!</string>
    <string name="gologin">用户尚未登录,请登录后操作!</string>
    <string name="add">添加</string>
    <string name="select">查找</string>
    <string name="nulluser">用户名输入有误，请检查后再次输入!!!</string>
    <string name="selagain">再按一次发送好友请求</string>
    <string name="sendadd">好友请求已发送!!!</string>
    <string name="myfriends">我的好友</string>
    <string name="newidea">新消息</string>
    <string name="wait">请等待对方同意请求!</string>
    <string name="friends">你已添加该用户!</string>
    <string name="agree">同意</string>
    <string name="disagree">拒绝</string>
    <string name="agreed">已同意</string>
    <string name="disagreed">已拒绝</string>
    <string name="askadd">请求加为好友</string>
    <string name="allow">对方未同意对您分享位置</string>
    <string name="frenadr">好友位置</string>
    <string name="about">使用帮助</string>
    <string name="home">首页</string>
    <string name="friend">我的好友</string>
    <string name="addfr">添加好友</string>
    <string name="exit">退出</string>
    <string name="inputname">请输入用户名</string>
    <string name="inputpass">请输入密码</string>
    <string name="inputpassagain">请再次输入密码</string>
    <string name="email">请输入邮箱</string>
    <string name="send">发送邮件</string>
    <string name="delete">删除</string>
    <string name="input_friend">输入好友名</string>
</resources>
