<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_friend"
        android:inputType="text"
        android:layout_toLeftOf="@+id/select"
        android:layout_toStartOf="@+id/select"
        android:layout_below="@id/add_toolbar" />

    <TextView
        android:id="@+id/select"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:text="@string/select"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/add_toolbar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/input_username" />

    <TextView
        android:id="@+id/newIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newidea"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/select"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/newIdea"
        android:layout_marginTop="10dp"/>

</RelativeLayout>